--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </div>
   <div class="row mx-auto container-fluid">
     <div class="products text-center col-lg-3 col-md-4 col-12">
-      <a href="Red printed.html"><img class="img-fluid mb-3" src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\buy.png"></a>
+      <a href="Red printed.html"><img class="img-fluid mb-3" src="https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/buy.png"></a>
       <div class="star">
       <i class="fa fa-star"></i>
        <i class="fa fa-star"></i>
@@ -311,4 +311,5 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     </body>
+
     </html>
