--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
  
   
     <div class="products text-center col-lg-3 col-md-4 col-12">
-      <a href="Gray-coloured Trackpants.html"><img class="img-fluid mb-3" src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\product-3.png"></a>
+      <a href="Gray-coloured Trackpants.html"><img class="img-fluid mb-3" src="https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/product-3.png"></a>
       <div class="star">
       <i class="fa fa-star"></i>
        <i class="fa fa-star"></i>
@@ -91,7 +91,7 @@
   
    
     <div class="products text-center img-center col-lg-3 col-md-4 col-12">
-      <a href="Black Sports Shoes.html"><img class="img-fluid mb-3" src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\buy-2.png"></a>
+      <a href="Black Sports Shoes.html"><img class="img-fluid mb-3" src="https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/buy-2.png"></a>
       <div class="star">
       <i class="fa fa-star"></i>
        <i class="fa fa-star"></i>
@@ -105,7 +105,7 @@
   </div>
    
     <div class="products text-center col-lg-3 col-md-4 col-12">
-      <a href="Blue printed shirt.html"><img class="img-fluid mb-3" src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\product4.png"></a>
+      <a href="Blue printed shirt.html"><img class="img-fluid mb-3" src="  https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/product4.png"></a>
       <div class="star">
       <i class="fa fa-star"></i>
        <i class="fa fa-star"></i>
@@ -127,7 +127,7 @@
   </div>
   <div class="row mx-auto container-fluid">
     <div class="products text-center col-lg-3 col-md-4 col-12">
-      <a href="Black T-shirt.html"><img class="img-fluid mb-3" src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\product-6.png"></a>
+      <a href="Black T-shirt.html"><img class="img-fluid mb-3" src="  https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/product-6.png"></a>
       <div class="star">
       <i class="fa fa-star"></i>
        <i class="fa fa-star"></i>
@@ -142,7 +142,7 @@
  
   
     <div class="products text-center col-lg-3 col-md-4 col-12">
-      <a href="Gray-coloured Sports Shoes.html"><img class="img-fluid mb-3" src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\product-5.png"></a>
+      <a href="Gray-coloured Sports Shoes.html"><img class="img-fluid mb-3" src="  https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/product-5.png"></a>
       <div class="star">
       <i class="fa fa-star"></i>
        <i class="fa fa-star"></i>
@@ -157,7 +157,7 @@
   
    
     <div class="products text-center img-center col-lg-3 col-md-4 col-12">
-      <a href="3 Sets of Socks.html"><img class="img-fluid mb-3" src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\product-7.png"></a>
+      <a href="3 Sets of Socks.html"><img class="img-fluid mb-3" src="  https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/product-7.png"></a>
       <div class="star">
       <i class="fa fa-star"></i>
        <i class="fa fa-star"></i>
@@ -171,7 +171,7 @@
   </div>
    
     <div class="products text-center col-lg-3 col-md-4 col-12">
-      <a href="Black coloured Watch.html"><img class="img-fluid mb-3" src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\product-8.png"></a>
+      <a href="Black coloured Watch.html"><img class="img-fluid mb-3" src="  https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/product-8.png"></a>
       <div class="star">
       <i class="fa fa-star"></i>
        <i class="fa fa-star"></i>
@@ -195,7 +195,7 @@
   </div>
   <div class="row mx-auto container-fluid">
     <div class="products text-center col-lg-3 col-md-4 col-12">
-      <a href="Sports Watch.html"><img class="img-fluid mb-3" src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\product-9.png"></a>
+      <a href="Sports Watch.html"><img class="img-fluid mb-3" src="  https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/product-9.png"></a>
       <div class="star">
       <i class="fa fa-star"></i>
        <i class="fa fa-star"></i>
@@ -210,7 +210,7 @@
  
   
     <div class="products text-center col-lg-3 col-md-4 col-12">
-      <a href="Sports Shoes.html"><img class="img-fluid mb-3" src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\product-10.png"></a>
+      <a href="Sports Shoes.html"><img class="img-fluid mb-3" src="  https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/product-10.png"></a>
       <div class="star">
       <i class="fa fa-star"></i>
        <i class="fa fa-star"></i>
@@ -225,7 +225,7 @@
   
    
     <div class="products text-center img-center col-lg-3 col-md-4 col-12">
-      <a href="Gray coloured Shoes.html"><img class="img-fluid mb-3" src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\product-11.png"><a>
+      <a href="Gray coloured Shoes.html"><img class="img-fluid mb-3" src="  https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/product-11.png"><a>
       <div class="star">
       <i class="fa fa-star"></i>
        <i class="fa fa-star"></i>
@@ -238,7 +238,7 @@
    
   </div>
    <div class="products text-center col-lg-3 col-md-4 col-12">
-      <a href="Red-coloured Trackpants.html"><img class="img-fluid mb-3" src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\product-12.png"></a>
+      <a href="Red-coloured Trackpants.html"><img class="img-fluid mb-3" src="  https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/product-12.png"></a>
       <div class="star">
       <i class="fa fa-star"></i>
        <i class="fa fa-star"></i>
@@ -267,7 +267,7 @@
          <i class="fa fa-star"></i>
           <i class="fa fa-star-o"></i>
           </div>
-          <img src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\user-1.png">
+          <img src="  https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/user-1.png">
           <h3>Sean Parker</h3>
       </div>
       <div class="col-3">
@@ -280,7 +280,7 @@
          <i class="fa fa-star"></i>
           <i class="fa fa-star-o"></i>
           </div>
-          <img src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\user-2.png">
+          <img src="  https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/user-2.png">
           <h3>Mike Smith</h3>
       </div>
       <div class="col-3">
@@ -293,7 +293,7 @@
          <i class="fa fa-star"></i>
           <i class="fa fa-star-o"></i>
           </div>
-          <img src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\user-3.png">
+          <img src="  https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/user-3.png">
           <h3>Mabel Joe</h3>
       </div>
     </div>
@@ -302,7 +302,7 @@
 <!--footer-->
 <div class="footer">
   <div class="container">
-    <img src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\redstore.png" width="180px">
+    <img src="  https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/redstore.png" width="180px">
     <p>•2025 Redstore. All rights reserved | Contact: info@redstore.com </p>
     
   </div>
@@ -313,5 +313,6 @@
     </body>
 
     </html>
+
 
 
