--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!--NAVIGATION-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light py-3 fixed-top">
   <div class="container">
-   <img src="redstore.png" width="180px">kkkmmm
+   <img src="redstore.png" width="180px">kkkmmmmilll
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span><i id="bar" class="fa fa-bars"></i></span>
     </button>
@@ -313,6 +313,7 @@
     </body>
 
     </html>
+
 
 
 
