--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </div>
   <div class="row mx-auto container-fluid">
     <div class="products text-center col-lg-3 col-md-4 col-12">
-      <a href="Red printed.html"><img class="img-fluid mb-3" src="https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/buy.png"></a>
+      <a href="Red printed.html"><img class="img-fluid mb-3" src="buy.png"></a>
       <div class="star">
       <i class="fa fa-star"></i>
        <i class="fa fa-star"></i>
@@ -76,7 +76,7 @@
  
   
     <div class="products text-center col-lg-3 col-md-4 col-12">
-      <a href="Gray-coloured Trackpants.html"><img class="img-fluid mb-3" src="https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/product-3.png"></a>
+      <a href="Gray-coloured Trackpants.html"><img class="img-fluid mb-3" src="product-3.png"></a>
       <div class="star">
       <i class="fa fa-star"></i>
        <i class="fa fa-star"></i>
@@ -313,6 +313,7 @@
     </body>
 
     </html>
+
 
 
 
