--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   
    
     <div class="products text-center img-center col-lg-3 col-md-4 col-12">
-      <a href="Black Sports Shoes.html"><img class="img-fluid mb-3" src="https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/buy-2.png"></a>
+      <a href="Black Sports Shoes.html"><img class="img-fluid mb-3" src="buy-2.png"></a>
       <div class="star">
       <i class="fa fa-star"></i>
        <i class="fa fa-star"></i>
@@ -313,6 +313,7 @@
     </body>
 
     </html>
+
 
 
 
