--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   </div>
    
     <div class="products text-center col-lg-3 col-md-4 col-12">
-      <a href="Blue printed shirt.html"><img class="img-fluid mb-3" src="  https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/product4.png"></a>
+      <a href="Blue printed shirt.html"><img class="img-fluid mb-3" src="product4.png"></a>
       <div class="star">
       <i class="fa fa-star"></i>
        <i class="fa fa-star"></i>
@@ -127,7 +127,7 @@
   </div>
   <div class="row mx-auto container-fluid">
     <div class="products text-center col-lg-3 col-md-4 col-12">
-      <a href="Black T-shirt.html"><img class="img-fluid mb-3" src="  https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/product-6.png"></a>
+      <a href="Black T-shirt.html"><img class="img-fluid mb-3" src="product-6.png"></a>
       <div class="star">
       <i class="fa fa-star"></i>
        <i class="fa fa-star"></i>
@@ -142,7 +142,7 @@
  
   
     <div class="products text-center col-lg-3 col-md-4 col-12">
-      <a href="Gray-coloured Sports Shoes.html"><img class="img-fluid mb-3" src="  https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/product-5.png"></a>
+      <a href="Gray-coloured Sports Shoes.html"><img class="img-fluid mb-3" src="product-5.png"></a>
       <div class="star">
       <i class="fa fa-star"></i>
        <i class="fa fa-star"></i>
@@ -157,7 +157,7 @@
   
    
     <div class="products text-center img-center col-lg-3 col-md-4 col-12">
-      <a href="3 Sets of Socks.html"><img class="img-fluid mb-3" src="  https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/product-7.png"></a>
+      <a href="3 Sets of Socks.html"><img class="img-fluid mb-3" src="https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/product-7.png"></a>
       <div class="star">
       <i class="fa fa-star"></i>
        <i class="fa fa-star"></i>
@@ -171,7 +171,7 @@
   </div>
    
     <div class="products text-center col-lg-3 col-md-4 col-12">
-      <a href="Black coloured Watch.html"><img class="img-fluid mb-3" src="  https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/product-8.png"></a>
+      <a href="Black coloured Watch.html"><img class="img-fluid mb-3" src="https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/product-8.png"></a>
       <div class="star">
       <i class="fa fa-star"></i>
        <i class="fa fa-star"></i>
@@ -313,6 +313,7 @@
     </body>
 
     </html>
+
 
 
 
