--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
   
    
     <div class="products text-center img-center col-lg-3 col-md-4 col-12">
-      <a href="3 Sets of Socks.html"><img class="img-fluid mb-3" src="https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/product-7.png"></a>
+      <a href="3 Sets of Socks.html"><img class="img-fluid mb-3" src="product-7.png"></a>
       <div class="star">
       <i class="fa fa-star"></i>
        <i class="fa fa-star"></i>
@@ -171,7 +171,7 @@
   </div>
    
     <div class="products text-center col-lg-3 col-md-4 col-12">
-      <a href="Black coloured Watch.html"><img class="img-fluid mb-3" src="https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/product-8.png"></a>
+      <a href="Black coloured Watch.html"><img class="img-fluid mb-3" src="product-8.png"></a>
       <div class="star">
       <i class="fa fa-star"></i>
        <i class="fa fa-star"></i>
@@ -195,7 +195,7 @@
   </div>
   <div class="row mx-auto container-fluid">
     <div class="products text-center col-lg-3 col-md-4 col-12">
-      <a href="Sports Watch.html"><img class="img-fluid mb-3" src="  https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/product-9.png"></a>
+      <a href="Sports Watch.html"><img class="img-fluid mb-3" src="product-9.png"></a>
       <div class="star">
       <i class="fa fa-star"></i>
        <i class="fa fa-star"></i>
@@ -210,7 +210,7 @@
  
   
     <div class="products text-center col-lg-3 col-md-4 col-12">
-      <a href="Sports Shoes.html"><img class="img-fluid mb-3" src="  https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/product-10.png"></a>
+      <a href="Sports Shoes.html"><img class="img-fluid mb-3" src="product-10.png"></a>
       <div class="star">
       <i class="fa fa-star"></i>
        <i class="fa fa-star"></i>
@@ -225,7 +225,7 @@
   
    
     <div class="products text-center img-center col-lg-3 col-md-4 col-12">
-      <a href="Gray coloured Shoes.html"><img class="img-fluid mb-3" src="  https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/product-11.png"><a>
+      <a href="Gray coloured Shoes.html"><img class="img-fluid mb-3" src="product-11.png"><a>
       <div class="star">
       <i class="fa fa-star"></i>
        <i class="fa fa-star"></i>
@@ -238,7 +238,7 @@
    
   </div>
    <div class="products text-center col-lg-3 col-md-4 col-12">
-      <a href="Red-coloured Trackpants.html"><img class="img-fluid mb-3" src="  https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/product-12.png"></a>
+      <a href="Red-coloured Trackpants.html"><img class="img-fluid mb-3" src="product-12.png"></a>
       <div class="star">
       <i class="fa fa-star"></i>
        <i class="fa fa-star"></i>
@@ -267,7 +267,7 @@
          <i class="fa fa-star"></i>
           <i class="fa fa-star-o"></i>
           </div>
-          <img src="  https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/user-1.png">
+          <img src="  user-1.png">
           <h3>Sean Parker</h3>
       </div>
       <div class="col-3">
@@ -280,7 +280,7 @@
          <i class="fa fa-star"></i>
           <i class="fa fa-star-o"></i>
           </div>
-          <img src="  https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/user-2.png">
+          <img src="  user-2.png">
           <h3>Mike Smith</h3>
       </div>
       <div class="col-3">
@@ -293,7 +293,7 @@
          <i class="fa fa-star"></i>
           <i class="fa fa-star-o"></i>
           </div>
-          <img src="  https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/user-3.png">
+          <img src="user-3.png">
           <h3>Mabel Joe</h3>
       </div>
     </div>
@@ -302,7 +302,7 @@
 <!--footer-->
 <div class="footer">
   <div class="container">
-    <img src="  https://github.com/SRIJANREDSTORE/Srijan_Ecommerce/blob/main/redstore.png" width="180px">
+    <img src="  redstore.png" width="180px">
     <p>•2025 Redstore. All rights reserved | Contact: info@redstore.com </p>
     
   </div>
@@ -313,6 +313,7 @@
     </body>
 
     </html>
+
 
 
 
