--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <!--NAVIGATION-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light py-3 fixed-top">
   <div class="container">
-   <img src="redstore.png" width="180px">kkkmmmmilll
+   <img src="redstore.png" width="180px">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span><i id="bar" class="fa fa-bars"></i></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="login.html">Loginmmm</a>
+          <a class="nav-link" href="login.html">Login</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="index.html">Home</a>
@@ -313,6 +313,7 @@
     </body>
 
     </html>
+
 
 
 
