--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 </nav>
 <div class="small-container">
 <h1>About Redstore</h1>
-<img src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\redstore.png" width="180px">
+<img src="redstore.png" width="180px">
 
     <h4>•REDSTORE»</h4>
 
@@ -98,3 +98,4 @@ Malaysia: Kuala Lumpur
 </body>
 
     </html>
+
