--- a/Red printed.html
+++ b/Red printed.html
@@ -14,7 +14,7 @@
         <!--NAVIGATION-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light py-3 fixed-top">
   <div class="container">
-   <img src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\redstore.png" width="180px">
+   <img src="redstore.png" width="180px">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span><i id="bar" class="fa fa-bars"></i></span>
     </button>
@@ -46,7 +46,7 @@
 <section class="container sproduct my-5 pt-5">
     <div class="row mt-5">
         <div class="col-lg-5 col-md-12 col-12">
-            <img class="img-fluid w-100%" src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\buy.png" width="500px">
+            <img class="img-fluid w-100%" src="buy.png" width="500px">
              </div>
        <div class="col-lg-6 col-md-12 col-12">
         <h6>Home / T-Shirt</h6>
@@ -70,7 +70,7 @@
 <!--footer-->
 <div class="footer">
   <div class="container">
-    <img src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\redstore.png" width="180px">
+    <img src="redstore.png" width="180px">
     <p>•2025 Redstore. All rights reserved | Contact: info@redstore.com </p>
     
   </div>
@@ -79,3 +79,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     </body>
     </html>
+
