--- a/Register.html
+++ b/Register.html
@@ -17,7 +17,7 @@
      <!--NAVIGATION-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light py-3 fixed-top">
   <div class="container">
-   <img src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\redstore.png" width="180px">
+   <img src="redstore.png" width="180px">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span><i id="bar" class="fa fa-bars"></i></span>
     </button>
@@ -86,3 +86,4 @@
 </div>
 </body>
 </html>
+
