--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
         <!--NAVIGATION-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light py-3 fixed-top">
   <div class="container">
-   <img src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\redstore.png" width="180px">
+   <img src="redstore.png" width="180px">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span><i id="bar" class="fa fa-bars"></i></span>
     </button>
@@ -79,4 +79,5 @@
 </div>
 
 </body>
+
 </html>
