--- a/product.html
+++ b/product.html
@@ -16,7 +16,7 @@
         <!--NAVIGATION-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light py-3 fixed-top">
   <div class="container">
-   <img src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\redstore.png" width="180px">
+   <img src="redstore.png" width="180px">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span><i id="bar" class="fa fa-bars"></i></span>
     </button>
@@ -52,7 +52,7 @@
   <h2 class="cart-title">Your Cart</h2>
   <div class="cart-content">
      <!--<div class="cart-box">
-      <img src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\buy.png" class="cart-img">
+      <img src="buy.png" class="cart-img">
       <div class="cart-detail"><h2 class="cart-product-title">Red-printed T-shirt</h2>
       <span class="cart-price">$92.00</span>
       <div class="cart-quantity">
@@ -81,28 +81,28 @@
   <div class="shop-content">
     <!--Box 1-->
     <div class="product-box">
-      <a href="Red printed.html"><img src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\buy.png" class="product-img"></a>
+      <a href="Red printed.html"><img src="buy.png" class="product-img"></a>
       <h2 class="product-title">Red-printed T-shirt</h2>
       <span class="price">$92.00</span>
        <i class="fa fa-shopping-bag add-cart"></i>
     </div>
     <!--Box 2-->
     <div class="product-box">
-       <a href="Black Sports Shoes.html"><img src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\buy-2.png" class="product-img"></a>
+       <a href="Black Sports Shoes.html"><img src="buy-2.png" class="product-img"></a>
       <h2 class="product-title">Black Sports Shoes</h2>
       <span class="price">$75.00</span>
        <i class="fa fa-shopping-bag add-cart"></i>
     </div>
     <!--Box 3-->
     <div class="product-box">
-      <a href="Gray-coloured Trackpants.html"><img src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\product-3.png" class="product-img"></a>
+      <a href="Gray-coloured Trackpants.html"><img src="product-3.png" class="product-img"></a>
       <h2 class="product-title">Gray-coloured Trackpants</h2>
       <span class="price">$100.00</span>
        <i class="fa fa-shopping-bag add-cart"></i>
     </div>
     <!--Box 4-->
     <div class="product-box">
-       <a href="Blue printed shirt.html"><img src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\product4.png" class="product-img"></a>
+       <a href="Blue printed shirt.html"><img src="product4.png" class="product-img"></a>
       <h2 class="product-title">Blue-printed T-shirt</h2>
       <span class="price">$120.00</span>
        <i class="fa fa-shopping-bag add-cart"></i>
@@ -110,7 +110,7 @@
 
     <!--Box 5-->
     <div class="product-box">
-      <a href="Gray-coloured Sports Shoes.html"><img src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\product-5.png" class="product-img"></a>
+      <a href="Gray-coloured Sports Shoes.html"><img src="product-5.png" class="product-img"></a>
       <h2 class="product-title">Gray-coloured Sports Shoes</h2>
       <span class="price">$80.00</span>
        <i class="fa fa-shopping-bag add-cart"></i>
@@ -118,49 +118,49 @@
 
     <!--Box 6-->
     <div class="product-box">
-      <a href="Black T-shirt.html"><img src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\product-6.png" class="product-img"></a>
+      <a href="Black T-shirt.html"><img src="product-6.png" class="product-img"></a>
       <h2 class="product-title">Black T-shirt</h2>
       <span class="price">$150.00</span>
        <i class="fa fa-shopping-bag add-cart"></i>
     </div>
     <!--Box 7-->
     <div class="product-box">
-      <a href="3 Sets of Socks.html"><img src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\product-7.png" class="product-img"></a>
+      <a href="3 Sets of Socks.html"><img src="product-7.png" class="product-img"></a>
       <h2 class="product-title">3 Sets of Socks</h2>
       <span class="price">$200.00</span>
        <i class="fa fa-shopping-bag add-cart"></i>
     </div>
     <!--Box 8-->
     <div class="product-box">
-       <a href="Black coloured Watch.html"><img src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\product-8.png" class="product-img"></a>
+       <a href="Black coloured Watch.html"><img src="product-8.png" class="product-img"></a>
       <h2 class="product-title">Black coloured Watch</h2>
       <span class="price">$300.00</span>
        <i class="fa fa-shopping-bag add-cart"></i>
     </div>
     <!--Box 9-->
     <div class="product-box">
-       <a href="Sports Watch.html"><img src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\product-9.png" class="product-img"></a>
+       <a href="Sports Watch.html"><img src="product-9.png" class="product-img"></a>
       <h2 class="product-title">Sports Watch</h2>
       <span class="price">$110.00</span>
        <i class="fa fa-shopping-bag add-cart"></i>
     </div>
     <!--Box 10-->
     <div class="product-box">
-      <a href="Sports Shoes.html"><img src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\product-10.png" class="product-img"></a>
+      <a href="Sports Shoes.html"><img src="product-10.png" class="product-img"></a>
       <h2 class="product-title">Sports Shoes</h2>
       <span class="price">$320.00</span>
        <i class="fa fa-shopping-bag add-cart"></i>
     </div>
     <!--Box 11-->
     <div class="product-box">
-       <a href="Gray coloured Shoes.html"><img src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\product-11.png" class="product-img"></a>
+       <a href="Gray coloured Shoes.html"><img src="product-11.png" class="product-img"></a>
       <h2 class="product-title">Gray coloured Shoes</h2>
       <span class="price">$220.00</span>
        <i class="fa fa-shopping-bag add-cart"></i>
     </div>
     <!--Box 12-->
     <div class="product-box">
-      <a href="Red-coloured Trackpants.html"><img src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\product-12.png" class="product-img"></a>
+      <a href="Red-coloured Trackpants.html"><img src="product-12.png" class="product-img"></a>
       <h2 class="product-title">Red-coloured Trackpants</h2>
       <span class="price">$320.00</span>
        <i class="fa fa-shopping-bag add-cart"></i>
@@ -170,11 +170,12 @@
 <!--footer-->
 <div class="footer">
   <div class="container">
-    <img src="C:\Users\admin\Downloads\E-COMMERCE IMAGES\images\redstore.png" width="180px">
+    <img src="redstore.png" width="180px">
     <p>•2025 Redstore. All rights reserved | Contact: info@redstore.com </p>
    
   </div>
 </div>
  <script src="script.js"></script>
 </body>
+
 </html>
