--- a/Register.html
+++ b/Register.html
@@ -75,7 +75,7 @@
       </div>
       <button type="submit" class="btn">Sign Up</button>
       <div class="logreg-link">
-        <p>Already have an account? <a href="Login.html" class="login-link">Login</a></p>
+        <p>Already have an account? <a href="login.html" class="login-link">Login</a></p>
       </div>
     </form>
   </div>
@@ -86,4 +86,5 @@
 </div>
 </body>
 </html>
+
 
